--- a/app/src/main/res/layout/viewholder_textinput_item.xml
+++ b/app/src/main/res/layout/viewholder_textinput_item.xml
@@ -7,8 +7,8 @@
     style="@style/ClickableView.WithBorders"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:layout_marginTop="20dp"
+    android:layout_height="120dp"
+    android:layout_marginTop="16dp"
     android:layout_marginHorizontal="8dp"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="12dp"
@@ -17,27 +17,27 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_margin="26dp"
+        android:layout_margin="24dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:hint="@string/text_input_hint"
-            android:paddingVertical="16dp">
+            android:paddingVertical="4dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_input_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/andika_new_basic"
-                android:gravity="bottom"
+                android:gravity="center_vertical"
                 android:inputType="text"
                 android:maxLength="20"
                 android:maxLines="1"
                 android:paddingStart="8dp"
+                android:paddingBottom="8dp"
                 android:textSize="28sp"
                 tools:ignore="RtlSymmetry" />
 
