--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,29 @@
         <item name="android:foreground">?attr/selectableItemBackground</item>
     </style>
 
+    <style name="ShapeAppearanceOverlay.MaterialComponents.ExtendedFloatingActionButton.Rounded" parent="">
+        <item name="cornerSize">50%</item>
+        <item name="cornerFamily">rounded</item>
+    </style>
+
+    <style name="FloatingButtonExtended">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">bottom|end</item>
+        <item name="android:layout_marginEnd">@dimen/layout_margin_normal</item>
+        <item name="android:layout_marginBottom">@dimen/layout_margin_normal</item>
+        <item name="backgroundTint">@color/tertiary</item>
+        <item name="tint">@color/white</item>
+        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.MaterialComponents.ExtendedFloatingActionButton.Rounded</item>
+        <item name="borderWidth">0dp</item>
+    </style>
+
+    <style name="FloatingButtonMini">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">@color/tertiary</item>
+        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.MaterialComponents.ExtendedFloatingActionButton.Rounded</item>
+        <item name="tint">@color/white</item>
+    </style>
+
 </resources>
