--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="layout_margin_small">8dp</dimen>
     <dimen name="layout_margin_normal">16dp</dimen>
+
+    <dimen name="uuid_item_padding">12dp</dimen>
+    <dimen name="fab_margin">12dp</dimen>
 </resources>
