--- a/app/src/main/res/layout/fragment_recyclerview_with_add_delete_refresh.xml
+++ b/app/src/main/res/layout/fragment_recyclerview_with_add_delete_refresh.xml
@@ -18,33 +18,39 @@
             app:navigationIcon="@drawable/ic_back"
             app:title="@string/task2_screen_title" />
 
-        <FrameLayout
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/recycler_view_task_2_swipe_refresh"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_height="match_parent">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view_task_2"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginVertical="2dp"
-                app:layoutManager="LinearLayoutManager"
-                tools:itemCount="10"
-                tools:listitem="@layout/viewholder_uuid_item" />
+                android:layout_height="0dp"
+                android:layout_weight="1">
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/add_button"
-                style="@style/FloatingButtonMini"
-                android:layout_gravity="bottom|end"
-                android:layout_marginEnd="@dimen/fab_margin"
-                android:layout_marginBottom="@dimen/fab_margin"
-                android:src="@drawable/ic_add"
-                android:backgroundTint="@color/accent"
-                app:fabCustomSize="48dp"
-                app:maxImageSize="24dp"
-                tools:ignore="ContentDescription" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_view_task_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginVertical="2dp"
+                    app:layoutManager="LinearLayoutManager"
+                    tools:itemCount="10"
+                    tools:listitem="@layout/viewholder_uuid_item" />
 
-        </FrameLayout>
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/recycler_view_task_2_add_button"
+                    style="@style/FloatingButtonMini"
+                    android:layout_gravity="bottom|end"
+                    android:layout_marginEnd="@dimen/fab_margin"
+                    android:layout_marginBottom="@dimen/fab_margin"
+                    android:backgroundTint="@color/accent"
+                    android:src="@drawable/ic_add"
+                    app:fabCustomSize="48dp"
+                    app:maxImageSize="24dp"
+                    tools:ignore="ContentDescription" />
+
+            </FrameLayout>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </LinearLayout>
 
